- Readded /summon to return ERR_SUMMONDISABLED (required by RFC1459)
- Made /users return ERR_USERSDISABLED (required by RFC1459)
- Removed all utmp calls
- Fixed Something ... cant remember what ... oh yes, fixed if (sptr->passwd[0]) to if (sptr->passwd)
  it stopped the server crashing !
- Made Code revisions so that we can compile on Win32, and fixed some of sts's late nite 
  coding sessions(dbin)
- Fixed some REAL dumb find_server_quick bugs
- Fixed a wierd NOTICE bug
- Modified and fixed the NOTICE bug totally, with some waste of the nospoof
  system
- Fixed a bug where +K could be set when +i was not (reported by rapta)
- Made it so if you set -i on a channel that is +K it sets -iK
- Fixed whowas so it no longer reports away messages
- Made major changes to +I (may need debugging)
  - When you set +I while on a chan it sends a PART to the rest of the channel
  - When you set -I which on a chan it sends a JOIN to the rest of the channel
  - Net/TechAdmins now receive a JOIN/PART when you JOIN/PART a channel
  - Net/TechAdmins can now see +I users in /names
- Fixed a typo in s_err.c reported by TRON
- Fixed more -Wall warnings
- Added #define LIST_SHOW_MODES to show channel modes in a /list (NOTE: only shows modes, not params)
- Fixed /mode # + bug reported by PhatNet/Mind
- Possible fixed the SJOIN kick bug (mode +Q), servers can now always kick
- Added NEW DNS resolver (Win32 Only atm)  ... use by defining NEWDNS
- FIXED "BUG" caused by NEWDNS *shrug*
- Fixed the passwd NICK problem
- Fixed the problem with NewDNS (ive always known about it but never known how it happens) [a pointer prob]
- Redhat 7 (broken string.h problem), ./Config
- Added SSL connections, open ports with P:ip:s:*:port to make them SSL
  ports, made after hq.alert.sk's implementation
- Added P:line flags C - client only, S - server only, J - java clients (replaces CONFROOM_JAVA_PORT)
- Fixed up a few various things
- Made SHOWCONNECTNOTICES work properly again, also with SSL