@@ -48,6 +48,7 @@ REGEXP=""
 NEEDSKIPNAME=""
 CRYPTOLIB=""
 CRYPTOIRCD=""
+OPENSSLPATH=""
 CCPATH=''
 STRCASECMP=undef
 SIGNAL=''
@@ -524,6 +525,29 @@ else
 	make
 	cd ../..
 fi
+
+if [ -r /usr/include/openssl/ssl.h ] ; then
+       echo $n "...Looking where you got the openssl binary...$c"
+       if [ -r /bin/openssl ] ; then
+               OPENSSLPATH=/bin/openssl
+               echo $OPENSSLPATH
+       elif [ -r /usr/bin/openssl ] ; then
+               OPENSSLPATH=/usr/bin/openssl
+               echo $OPENSSLPATH
+       elif [ -r /usr/local/bin/openssl ] ; then
+               OPENSSLPATH=/usr/local/bin/openssl
+               echo $OPENSSLPATH
+       elif [ -r /usr/local/ssl/bin/openssl ] ; then
+               OPENSSLPATH=/usr/local/ssl/bin/openssl
+               echo $OPENSSLPATH
+       else
+               echo "Couldn't find it! (bad)"
+               OPENSSLPATH=/bin/false
+               OPENSSLPATH=/bin/false
+       fi
+fi
+echo                 
+
 
 #
 # to b or not to b
@@ -1727,6 +1751,18 @@ else
 	
 fi
 
+if [ -n "$CRYPTOIRCD" ] ; then
+       $RM -f Makefile.tmp
+       sed -e "s@^OPENSSLPATH=\(.*\)@OPENSSLPATH=$OPENSSLPATH@" Makefile > Makefile.tmp
+       cp Makefile.tmp Makefile
+       $RM -f Makefile.tmp
+else
+    $RM -f Makefile.tmp
+    sed -e "s@^OPENSSLPATH=\(.*\)@OPENSSLPATH=@" Makefile > Makefile.tmp
+    cp Makefile.tmp Makefile
+    $RM -f Makefile.tmp
+fi
+
 if [ -n "$REGEX" ] ; then
     $RM -f Makefile.tmp
     sed -e "s@^REGEX=\(.*\)@REGEX=@" Makefile > Makefile.tmp
@@ -1853,6 +1889,7 @@ if [ "$OSNAME" = "Linux (with GLIBC 2.x or greater)" ]; then
 fi
 
 if [ -n "$CRYPTOIRCD" ] ; then
+    export OPENSSLPATH
     make pem
 fi
 
