@@ -1634,12 +1634,14 @@ void sendto_connectnotice(nick, user, sptr)
 	char connectd[1024];
 	char connecth[1024];
 	ircsprintf(connectd,
-	    "*** Notice -- Client connecting on port %d: %s (%s@%s) %s",
+	    "*** Notice -- Client connecting on port %d: %s (%s@%s) %s%s%s",
 	    sptr->acpt->port, nick, user->username, user->realhost,
 #if defined(CRYPTOIRCD) || defined(USE_SSL)
-	IsSecure(sptr) ? "[secure]" : "");
+	IsSecure(sptr) ? "[secure " : "", 
+	IsSecure(sptr) ? SSL_get_cipher((SSL *)sptr->ssl) : "",
+	IsSecure(sptr) ? "]" : "");
 #else
-	"");
+	"", "", "");
 #endif
 	ircsprintf(connecth,
 	    "*** Notice -- Client connecting: %s (%s@%s) [%s] {%d}", nick,
