@@ -10,7 +10,7 @@ x509_extensions = cert_type
 
 [ req_dn ]
 countryName = US
-countryName_default             = US
+countryName_default             = Country Name
 countryName_min                 = 2
 countryName_max                 = 2
 
@@ -25,7 +25,7 @@ localityName                    = Locality Name (eg, city)
 organizationalUnitName          = Organizational Unit Name (eg, section)
 #organizationalUnitName_default =
 
-0.commonName                    = Common Name (FQDN of your server)
+0.commonName                    = Common Name (Full domain of your server)
 
 1.commonName                    = Common Name (default)
 1.commonName_value              = localhost
